# MpRPC-Cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  setNewProto.sh
docs/: 整体设计和流程.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
example/protobuf/: a.out
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcchannel.h  mprpcconfig.cc  mprpcconfig.h  mprpccontroller.cc  rpcprovider.cc  rpcprovider.h  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
tools-package/: README.md
